# ants

./: flake.nix  run.nu  todo.md
app/: .gitignore  esbuild.js  package-lock.json  package.json
app/src/: main.js
app/www/: .gitignore  index.html  main.js  main.js.map
wasm/: Cargo.toml
wasm/src/: lib.rs  utils.rs
